--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -8,9 +8,12 @@
 <html>
 <head>
     <title>title</title>
+    <link href="~/css/site.css" rel="stylesheet">
 </head>
 <body>
 <div>
+    <img src="~/images/logo.png" alt="logo" class="logo">
+    <img src="~/testImages/pc.png" alt="test">
     <h1>Welcome to book store application</h1>
     <h1>@DateTime.Now.ToString("yy-MM-dd")</h1>
 </div>
