libman (use bootstrap etc)

--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -8,14 +8,23 @@
 <html>
 <head>
     <title>title</title>
+    <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="~/css/site.css" rel="stylesheet">
 </head>
 <body>
-<div>
+<div class="container">
     <img src="~/images/logo.png" alt="logo" class="logo">
     <img src="~/testImages/pc.png" alt="test">
     <h1>Welcome to book store application</h1>
     <h1>@DateTime.Now.ToString("yy-MM-dd")</h1>
 </div>
 </body>
+<script src="~/lib/jquery/jquery.js"></script>
+
+<script>
+ $(document).ready(function (){
+     console.log("page loaded");
+ });
+
+</script>
 </html>
