--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
 <div class="container">
     <img src="~/images/logo.png" alt="logo" class="logo">
     <img src="~/testImages/pc.png" alt="test">
-    <h1>Welcome to book store application</h1>
+    <h1>Welcome to book store application ss</h1>
     <h1>@DateTime.Now.ToString("yy-MM-dd")</h1>
 </div>
 </body>
