@section and @ renderSection

--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -4,19 +4,28 @@
 }
 
 
+ @section breadcrumb
+  {
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="#">Home</a></li>
+      </ol>
+    </nav>
+  }
 <section class=" py-5 text-center container">
-    <div class="row py-lg-5">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Book store</h1>
-        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-        <p>
-          <a href="#" class="btn btn-primary my-2">Search books</a>
-        </p>
-      </div>
+ 
+  <div class="row py-lg-5">
+    <div class="col-lg-6 col-md-8 mx-auto">
+      <h1 class="fw-light">Book store</h1>
+      <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+      <p>
+        <a href="#" class="btn btn-primary my-2">Search books</a>
+      </p>
     </div>
+  </div>
 </section>
 
-  <div class="album py-5 bg-light">
+<div class="album py-5 bg-light">
   <div class="container">
 
     <div class="row">
@@ -72,4 +81,14 @@
 
     </div>
   </div>
-  </div>
+</div>
+
+@section scripts
+{
+  <script>
+   $(document).ready(function () {
+     console.log("document is ready")
+   })
+  </script>
+}
+
