--- a/BookStore/Views/Book/GetAllBooks.cshtml
+++ b/BookStore/Views/Book/GetAllBooks.cshtml
@@ -6,7 +6,15 @@
     Layout = "_Layout";
 }
 
-
+ @section breadcrumb
+  {
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="#">Home</a></li>
+          <li class="breadcrumb-item"><a href="#">All books</a></li>
+      </ol>
+    </nav>
+  }
 <div class="container">
     <h1 class="display-4">All books</h1>
     <div class="row">
