--- a/BookStore/Views/Book/GetAllBooks.cshtml
+++ b/BookStore/Views/Book/GetAllBooks.cshtml
@@ -30,8 +30,7 @@
                         <p class="card-text">@book.Description.</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                <a href="/book/getbook/@book.Id" class="btn btn-sm btn-outline-secondary">View</a>
                             </div>
                             <small class="text-muted">@book.Author</small>
                         </div>
