--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -54,8 +54,10 @@
 </footer>
 
 </body>
+<script src="~/lib/twitter-bootstrap/js/bootstrap.min.js"> </script>
 <script src="~/lib/twitter-bootstrap/js/bootstrap.bundle.min.js"> </script>
 <script src="~/lib/jquery/jquery.js"></script>
+
 
 @await RenderSectionAsync("scripts", false)
 
