--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -1,9 +1,14 @@
-
+@{
+  var data = ViewBag.Data;
+  
+}
  @section breadcrumb
   {
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Home</a></li>
+        <li class="breadcrumb-item"><a href="#">Home - @ViewBag.Title</a></li>
+        <br/>@data.Id
+        <br/>AUthor = @ViewBag.Type.Author
       </ol>
     </nav>
   }
