ViewData, objects..., set title of pages

--- a/BookStore/Views/Book/GetAllBooks.cshtml
+++ b/BookStore/Views/Book/GetAllBooks.cshtml
@@ -1,4 +1,7 @@
+@{
+    ViewData["Title"] = "All Books";
 
+}
 @model IEnumerable<BookModel>
 @* @model IEnumerable<BookStore.Models.BookModel> *@
 
