--- a/BookStore/Views/Home/AboutUs.cshtml
+++ b/BookStore/Views/Home/AboutUs.cshtml
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title>title</title>
-</head>
-<body>
-<div>
-      <h1>About us page</h1>
-</div>
-</body>
-</html>
+@{
+    ViewData["Title"] = "About us";
+}
+<h1>About us page</h1>
