--- a/BookStore/Views/Book/GetAllBooks.cshtml
+++ b/BookStore/Views/Book/GetAllBooks.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "All Books";
 
 }
-@model IEnumerable<BookModel>
+@* @model IEnumerable<BookModel> *@
 @* @model IEnumerable<BookStore.Models.BookModel> *@
 
  @section breadcrumb
