--- a/BookStore/Views/Book/GetAllBooks.cshtml
+++ b/BookStore/Views/Book/GetAllBooks.cshtml
@@ -29,7 +29,8 @@
                         <p class="card-text">@book.Description.</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/book/getbook/@book.Id" class="btn btn-sm btn-outline-secondary">View</a>
+                                <a asp-controller="Book" asp-action="GetBook" asp-route-id="@book.Id"
+                                   asp-fragment="similarBooks" class="btn btn-sm btn-outline-secondary">View</a>
                             </div>
                             <small class="text-muted">@book.Author</small>
                         </div>
