--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -25,16 +25,16 @@
       </ul>
       <ul class="navbar-nav flex-grow-1">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link active" aria-current="page" asp-controller="Home" asp-action="Index">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/book/getallbooks">All Books</a>
+          <a class="nav-link" asp-controller="Book" asp-action="GetAllBooks">All Books</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" asp-controller="Home" asp-action="AboutUs">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/home/aboutus">About Us</a>
+          <a class="nav-link" asp-protocol="https" asp-host="zufil.ee" >New link</a>
         </li>
       </ul>
     </div>
