--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="~/images/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
+      <img src="~/images/logo.png" alt="" width="30" height="30" asp-append-version="true" class="d-inline-block align-text-top">
       Book stoore
     </a>
     
