--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -19,6 +19,12 @@
  
   <div class="row py-lg-5">
     <div class="col-lg-6 col-md-8 mx-auto">
+      <environment names="Development">
+        <h5>In dev</h5>
+      </environment>
+      <environment names="Production">
+        <h5>In Prod</h5>
+      </environment>
       <h1 class="fw-light">Book store</h1>
       <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
       <p>
