--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -2,7 +2,14 @@
 <html lang="en">
 <head>
     <title>@ViewData["Title"]</title>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet"
+        href="http://cdn.jsdelivr.net/npm/bootstrap@9.1.3/dist/css/bootstrap.min.css" 
+        asp-fallback-href="~/lib/twitter-bootstrap/css/bootstrap.css"
+        asp-fallback-test-class="sr-only"
+        asp-fallback-test-property="position"
+        asp-fallback-test-value="absolute"
+        integrity="" 
+        crossorigin="anonymous">
         <link href="~/css/site.css" rel="stylesheet">
 </head>
 <body>
