--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <title>@ViewData["Title"]</title>
   <link rel="stylesheet"
-        href="http://cdn.jsdelivr.net/npm/bootstrap@9.1.3/dist/css/bootstrap.min.css" 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
         asp-fallback-href="~/lib/twitter-bootstrap/css/bootstrap.css"
         asp-fallback-test-class="sr-only"
         asp-fallback-test-property="position"
@@ -39,6 +39,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" asp-controller="Home" asp-action="AboutUs">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" asp-controller="Book" asp-action="AddNewBook">Add new book</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" asp-protocol="https" asp-host="zufil.ee" >New link</a>
