--- a/BookStore/Views/Book/AddNewBook.cshtml
+++ b/BookStore/Views/Book/AddNewBook.cshtml
@@ -24,8 +24,9 @@
         <div asp-validation-summary="ModelOnly"></div>
         <div class="mb-3">
             <label  class="form-label" asp-for="Language"></label>
-            <select asp-for="Language" class="form-control" asp-items="new SelectList(Model.Languages)">
+            <select asp-for="Language" class="form-control" asp-items='new SelectList(Model.Languages, "Id", "Text", Model.Languages.First().Id)'>
                 <option value="">Please choose your language</option>
+
             </select>
             <span asp-validation-for="Language" class="text-danger"></span>
         </div>
