--- a/BookStore/Views/Book/AddNewBook.cshtml
+++ b/BookStore/Views/Book/AddNewBook.cshtml
@@ -24,13 +24,13 @@
         <div asp-validation-summary="All"></div>
         <div asp-validation-summary="ModelOnly"></div>
         <div class="mb-3">
-            <label  class="form-label" asp-for="LanguageEnum"></label>
-            <select asp-for="LanguageEnum" class="form-control" asp-items="Html.GetEnumSelectList<LanguageEnum>()">
-            @* <select asp-for="Language" class="form-control" asp-items='new SelectList(Model.Languages, "Id", "Text", Model.Languages.First().Id)'> *@
+            <label  class="form-label" asp-for="LanguageId"></label>
+            @* <select asp-for="LanguageId" class="form-control" asp-items="Html.GetEnumSelectList<LanguageEnum>()"> *@
+            <select asp-for="LanguageId" class="form-control" asp-items='new SelectList(Model.Languages, "Id", "Name", Model.Languages.First().Id)'>
                 <option value="">Please choose your language</option>
 
             </select>
-            <span asp-validation-for="LanguageEnum" class="text-danger"></span>
+            <span asp-validation-for="LanguageId" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label class="form-label" asp-for="Title"></label>
