--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -60,6 +60,7 @@
 <footer class="border-top footer text-muted text-center">
   <div class="container">
     Copyrigth &copy; Book store @DateTime.Now.Year
+    <custom-email email="ahmed.abdull2016@gmail.com"></custom-email>
   </div>
 </footer>
 
