--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -26,6 +26,8 @@
         <h5>In Prod</h5>
       </environment>
       <h1 class="fw-light">Book store</h1>
+      <big>Big books</big>
+      <p big> P Big books</p>
       <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
       <p>
         <a href="#" class="btn btn-primary my-2">Search books</a>
