--- a/BookStore/Views/Book/GetAllBooks.cshtml
+++ b/BookStore/Views/Book/GetAllBooks.cshtml
@@ -22,7 +22,7 @@
         {
             <div class="col-md-4">
                 <div class="card shadow-sm">
-                    <img src="~/@book.CoverImageUrl" alt=""/>
+                    <img src="@book.CoverImageUrl" alt=""/>
                     <div class="card-body">
                         <h3 class="card-title">@book.Title</h3>
                         <p class="card-text">@book.Description.</p>
