--- a/BookStore/Views/Book/GetBook.cshtml
+++ b/BookStore/Views/Book/GetBook.cshtml
@@ -58,14 +58,33 @@
     
             <div class="row">
                 <div class="col-md-4">
-                    <a class="btn btn-outline-primary" data-toggle="modal" data-target="#exampleModal">
-                        Read now
+                    <a class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Read now 
                     </a>
                 </div>
             </div>
     
             <hr />
-    
+    <!-- Modal -->
+    <div class="modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              @* <embed src="@Model.book.BookPdfUrl" class="w-100" /> *@
+              <iframe src="@Model.book.BookPdfUrl" class="w-100">
+                  
+              </iframe>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
             <ul class="list-group">
                 <li class="list-group-item"><span class="font-weight-bold">Category - </span> @Model.book.Category</li>
                 <li class="list-group-item"><span class="font-weight-bold">Total pages - </span> @Model.book.TotalPages</li>
