--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -13,56 +13,14 @@
         <link href="~/css/site.css" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" href="#">
-      <img src="~/images/logo.png" alt="" width="30" height="30" asp-append-version="true" class="d-inline-block align-text-top">
-      Book stoore
-    </a>
-    
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse collapse d-sm-inline flex-sm-row-reverse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="btn btn-outline-primary">Login</a>
-          <a class="btn btn-primary">Register</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav flex-grow-1">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" asp-controller="Home" asp-action="Index">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" asp-controller="Book" asp-action="GetAllBooks">All Books</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" asp-controller="Home" asp-action="AboutUs">About Us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" asp-controller="Book" asp-action="AddNewBook">Add new book</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" asp-protocol="https" asp-host="zufil.ee" >New link</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
+<partial name="_header"/>
 @await RenderSectionAsync("breadcrumb", false)
 
 <main role="main">
   @RenderBody()
 </main>
 
-<footer class="border-top footer text-muted text-center">
-  <div class="container">
-    Copyrigth &copy; Book store @DateTime.Now.Year
-    <custom-email email="ahmed.abdull2016@gmail.com"></custom-email>
-  </div>
-</footer>
+<partial name="_footer"/>
 
 </body>
 <script src="~/lib/twitter-bootstrap/js/bootstrap.min.js"> </script>
