--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -42,13 +42,14 @@
     <div class="row">
       <h1>Top books</h1>
       <div class="col-md-4">
-        <partial name="_bookThumbnail" model="new BookModel()"/>
+        @* <partial name="_bookThumbnail" model="new BookModel()"/> *@
+        @Html.Partial("_bookThumbnail",new BookModel())
       </div>
       <div class="col-md-4">
         <partial name="_bookThumbnail" model="new BookModel()"/>
       </div>
       <div class="col-md-4">
-       <partial name="_bookThumbnail" model="new BookModel()"/>
+       @{ await Html.RenderPartialAsync("_bookThumbnail", new BookModel()); }
       </div>
 
     </div>
