--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -39,8 +39,8 @@
 <div class="album py-5 bg-light">
   <div class="container">
     <div class="row">
-      @* @await Component.InvokeAsync("TopBooks") *@
-      <vc:top-books></vc:top-books>
+      @* @await Component.InvokeAsync("TopBooks", new { count = 1}) *@
+      <vc:top-books count="1"></vc:top-books>
           
     </div>
     @* <div class="row"> *@
