--- a/BookStore/Views/Shared/_header.cshtml
+++ b/BookStore/Views/Shared/_header.cshtml
@@ -23,7 +23,7 @@
                     <a class="nav-link" asp-controller="Book" asp-action="GetAllBooks">All Books</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Home" asp-action="AboutUs">About Us</a>
+                    <a class="nav-link" href="/about-us">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" asp-controller="Book" asp-action="AddNewBook">Add new book</a>
