--- a/BookStore/Views/Shared/_header.cshtml
+++ b/BookStore/Views/Shared/_header.cshtml
@@ -1,8 +1,9 @@
+@inject BookStore.Repository.IBookRepository _bookRepository
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" href="#">
             <img src="~/images/logo.png" alt="" width="30" height="30" asp-append-version="true" class="d-inline-block align-text-top">
-            Book stoore
+            @_bookRepository.GetAppName()
         </a>
     
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
