appsetting.json file (configuration file)

--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -16,6 +16,7 @@
         <li class="breadcrumb-item"><a href="#">Home - @ViewBag.Title</a></li>
         <br/> @ViewData["CustomProperty"]
         <br/> @book?.Title
+        <br/> @book?.Author
       </ol>
     </nav>
   }
