--- a/BookStore/Views/Shared/_header.cshtml
+++ b/BookStore/Views/Shared/_header.cshtml
@@ -12,8 +12,8 @@
         <div class="navbar-collapse collapse d-sm-inline flex-sm-row-reverse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="btn btn-outline-primary">Login</a>
-                    <a class="btn btn-primary">Register</a>
+                    <a  class="btn btn-outline-primary">Login</a>
+                    <a asp-controller="Account" asp-action="Signup" class="btn btn-primary">Register</a>
                 </li>
             </ul>
             <ul class="navbar-nav flex-grow-1">
@@ -29,6 +29,7 @@
                 <li class="nav-item">
                     <a class="nav-link" asp-controller="Book" asp-action="AddNewBook">Add new book</a>
                 </li>
+                
                 <li class="nav-item">
                     <a class="nav-link" asp-protocol="https" asp-host="zufil.ee" >New link</a>
                 </li>
