--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -23,8 +23,8 @@
 <partial name="_footer"/>
 
 </body>
-<script src="~/lib/twitter-bootstrap/js/bootstrap.min.js"> </script>
-<script src="~/lib/twitter-bootstrap/js/bootstrap.bundle.min.js"> </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 <script src="~/lib/jquery/jquery.js"></script>
 
 <script src="~/lib/jquery-validate/jquery.validate.js"></script>
