--- a/BookStore/Views/Account/Login.cshtml
+++ b/BookStore/Views/Account/Login.cshtml
@@ -3,7 +3,7 @@
     Layout = "_Layout";
 }
 <div class="container">
-    <form asp-controller="Account" asp-action="Login" method="post">
+    <form method="post">
         <div asp-validation-summary="All"></div>
         <div class="mb-3">
             <label class="form-label" asp-for="Email"></label>
