--- a/BookStore/Views/Shared/_LoginInfo.cshtml
+++ b/BookStore/Views/Shared/_LoginInfo.cshtml
@@ -5,8 +5,10 @@
 
     <!-- Example split danger button -->
     <div class="btn-group">
-        <a class="nav-link dropdown-toggle text-dark" href="#" data-bs-toggle="dropdown" aria-expanded="false">Hello @User.Identity?.Name</a>
-        
+        <a class="nav-link dropdown-toggle text-dark" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+            @* Hello @User.Identity?.Name *@
+            Hello @(User.FindFirst("UserFirstName").Value + " " + User.FindFirst("UserLastName").Value)
+        </a>
         <ul class="dropdown-menu">
             <li><a class="dropdown-item" asp-action="Signout" asp-controller="Account">Logout</a></li>
         </ul>
