--- a/BookStore/Views/Shared/_LoginInfo.cshtml
+++ b/BookStore/Views/Shared/_LoginInfo.cshtml
@@ -11,6 +11,7 @@
         </a>
         <ul class="dropdown-menu">
             <li><a class="dropdown-item" asp-action="Signout" asp-controller="Account">Logout</a></li>
+            <li><a class="dropdown-item" asp-action="ChangePassword" asp-controller="Account">Change password</a></li>
         </ul>
     </div>
 }
