--- a/BookStore/Views/Shared/_header.cshtml
+++ b/BookStore/Views/Shared/_header.cshtml
@@ -26,7 +26,9 @@
                 <li class="nav-item">
                     <a class="nav-link" asp-controller="Book" asp-action="AddNewBook">Add new book</a>
                 </li>
-                
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="Admin" asp-controller="Home" asp-action="Index">Admin</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" asp-protocol="https" asp-host="zufil.ee" >New link</a>
                 </li>
