--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <title>@ViewData["Title"]</title>
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
-        asp-fallback-href="~/lib/twitter-bootstrap/css/bootstrap.css"
-        asp-fallback-test-class="sr-only"
-        asp-fallback-test-property="position"
-        asp-fallback-test-value="absolute"
-        integrity="" 
-        crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+          asp-fallback-href="~/lib/twitter-bootstrap/css/bootstrap.css"
+          asp-fallback-test-class="sr-only"
+          asp-fallback-test-property="position"
+          asp-fallback-test-value="absolute"
+          integrity="" 
+          crossorigin="anonymous">
+    @* created by BuildBundlerMinifier *@
         <link href="~/css/site.min.css" rel="stylesheet">
 </head>
 <body>
